camapp: make java linter happier